Display POBox sync events in the sync log (fix for bug https://bugzilla.novell.com/show_bug.cgi?id=73525).
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4781 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.resx
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.resx
@@ -640,6 +640,12 @@
   <data name="serverConnectErrorTitle">
     <value>Unable to Connect to iFolder Server</value>
   </data>
+  <data name="checkingForiFolders">
+    <value>Checking for new iFolders...</value>
+  </data>
+  <data name="doneCheckingForiFolders">
+    <value>Done checking for new iFolders</value>
+  </data>
   <data name="localSync">
     <value>Checking for local changes: {0}</value>
   </data>
