1. Disable remove from server option when deleting an account that is not logged in (fix for https://bugzilla.novell.com/show_bug.cgi?id=78073). 2. Activate the Accounts dialog in "Add" mode after affirmative answer of prompt to create account.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4783 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/Preferences.resx
+++ b/ifolder/src/FormsTrayApp/Preferences.resx
@@ -3487,4 +3487,7 @@
   <data name="updateHostError">
     <value>An error was encountered while saving the server host address.</value>
   </data>
+  <data name="removeAccountError">
+    <value>An error was encountered while removing the account.</value>
+  </data>
 </root>
