--- a/ifolder/src/FormsTrayApp/AcceptInvitation.resx
+++ b/ifolder/src/FormsTrayApp/AcceptInvitation.resx
@@ -880,58 +880,61 @@
   <data name="&gt;&gt;$this.Type">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-	<data name="Admin">
-		<value>Full Control</value>
-	</data>
-	<data name="ReadWrite">
-		<value>Read/Write</value>
-	</data>
-	<data name="ReadOnly">
-		<value>Read Only</value>
-	</data>
-	<data name="unknownRights">
-		<value>Unknown</value>
-	</data>
-	<data name="pathValidationError">
-		<value>An exception occurred while validating the path.</value>
-	</data>
-	<data name="pathValidationErrorTitle">
-		<value>Unable to Validate Path</value>
-	</data>
-	<data name="pathInvalidError">
-		<value>The location selected for the new iFolder is below an existing iFolder, or contains a folder with the same name.  Please select a different location for this iFolder.</value>
-	</data>
-	<data name="pathInvalidErrorTitle">
-		<value>Invalid Directory</value>
-	</data>
-	<data name="acceptError">
-		<value>An exception occurred while accepting the invitation.</value>
-	</data>
-	<data name="networkPath">
-		<value>iFolders must be placed on a local drive.</value>
-	</data>
-	<data name="selectLocation">
-		<value>Select a location for the iFolder.</value>
-	</data>
-	<data name="iFolderName">
-		<value>iFolder name: {0}</value>
-	</data>
-	<data name="sharedBy">
-		<value>Shared by: {0}</value>
-	</data>
-	<data name="rights">
-		<value>Rights: {0}</value>
-	</data>
-	<data name="Deny">
-		<value>Deny</value>
-	</data>
-	<data name="createDirectoryError">
-		<value>Unable to create directory.</value>
-	</data>
-	<data name="createDirectoryMessage">
-		<value>The directory specified does not exist.  Do you want to create the directory?</value>
-	</data>
-	<data name="createDirectoryTitle">
-		<value>Create Directory</value>
-	</data>
+  <data name="Admin">
+    <value>Full Control</value>
+  </data>
+  <data name="ReadWrite">
+    <value>Read/Write</value>
+  </data>
+  <data name="ReadOnly">
+    <value>Read Only</value>
+  </data>
+  <data name="unknownRights">
+    <value>Unknown</value>
+  </data>
+  <data name="pathValidationError">
+    <value>An exception occurred while validating the path.</value>
+  </data>
+  <data name="pathValidationErrorTitle">
+    <value>Unable to Validate Path</value>
+  </data>
+  <data name="pathInvalidError">
+    <value>The location selected for the new iFolder is below an existing iFolder, or contains a folder with the same name.  Please select a different location for this iFolder.</value>
+  </data>
+  <data name="pathInvalidErrorTitle">
+    <value>Invalid Directory</value>
+  </data>
+  <data name="acceptError">
+    <value>An exception occurred while accepting the invitation.</value>
+  </data>
+  <data name="networkPath">
+    <value>iFolders must be placed on a local drive.</value>
+  </data>
+  <data name="selectLocation">
+    <value>Select a location for the iFolder.</value>
+  </data>
+  <data name="iFolderName">
+    <value>iFolder name: {0}</value>
+  </data>
+  <data name="sharedBy">
+    <value>Shared by: {0}</value>
+  </data>
+  <data name="rights">
+    <value>Rights: {0}</value>
+  </data>
+  <data name="Deny">
+    <value>Deny</value>
+  </data>
+  <data name="createDirectoryError">
+    <value>Unable to create directory.</value>
+  </data>
+  <data name="createDirectoryMessage">
+    <value>The directory specified does not exist.  Do you want to create the directory?</value>
+  </data>
+  <data name="createDirectoryTitle">
+    <value>Create Directory</value>
+  </data>
+  <data name="accessDenied">
+    <value>You do not sufficient access rights to the specified directory.  Please choose a different directory and try again.</value>
+  </data>
 </root>
