--- a/ifolder/src/iFolderShell/CreateiFolder.resx
+++ b/ifolder/src/iFolderShell/CreateiFolder.resx
@@ -730,19 +730,22 @@
   <data name="&gt;&gt;$this.Type">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-	<data name="chooseFolder">
-		<value>Choose a folder to convert to an iFolder.</value>
-	</data>
-	<data name="invalidFolder">
-		<value>An invalid folder was specified.</value>
-	</data>
-	<data name="iFolderCreateError">
-		<value>An error was encountered while creating the iFolder.</value>
-	</data>
-	<data name="createPrompt">
-		<value>The specified path does not exist.  Do you want to create it?</value>
-	</data>
-	<data name="createPromptTitle">
-		<value>Create Path</value>
-	</data>
+  <data name="chooseFolder">
+    <value>Choose a folder to convert to an iFolder.</value>
+  </data>
+  <data name="invalidFolder">
+    <value>An invalid folder was specified.</value>
+  </data>
+  <data name="iFolderCreateError">
+    <value>An error was encountered while creating the iFolder.</value>
+  </data>
+  <data name="createPrompt">
+    <value>The specified path does not exist.  Do you want to create it?</value>
+  </data>
+  <data name="createPromptTitle">
+    <value>Create Path</value>
+  </data>
+  <data name="accessDenied">
+    <value>You do not sufficient access rights to the specified directory.  Please choose a different directory and try again.</value>
+  </data>
 </root>
